Tue Jan 13 02:48:55 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* applied BSD patch from Alex <garbanzo@hooked.net>
	  (just a few missing includeds)

	* various fixes and geometry improvements

	* added a linedit for a command to be executed on disconnect
	

Mon Jan 12 17:18:41 1998  Mario Weilguni  <mweilguni@sime.com>

	* username and password are now remembered between
	session. Remembering the password can be switched off for each
	account.

	* connect.cpp: fixed 2 security bugs in lockfile(). Not it's
	checked if the lockfile is a regular file and no more than
	32 characters are read from this file, no matter how long it is.

	* Added PAP authentication option and code. Using PAP (at least
	client-side-authentication should now be VERY easy. Sorry,
	no CHAP support so far.
	
	* edit.cpp: Added a checkbox if to use kppp's default script.
	If this checkbox is checked, all scriptedit controls are disabled.

Sun Jan 11 21:03:00 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* lslisder in modemcmd.cpp wasn't set correctely on widget
	  creation. 


Thu Jan 11 14:58:29 1998  Peter Silva <peter.silva@videotron.ca>
	* (0.8.10) incorporate iconify_on_connect patch.


Sat Jan 10 21:23:10 1998  Mario Weilguni  <mweilguni@sime.com>

	* main.cpp: fixed a bug that cause kppp to go wild and display
	hundreds of windows when it cannot load a ruleset file

Wed Jan  7 13:00:24 1998  Mario Weilguni  <mweilguni@sime.com>

	* edit.cpp: improved the IP and Gateway widgets

	* various improvements for the geometry managements

Tue Jan  6 12:56:14 1998  Mario Weilguni  <mweilguni@sime.com>

	* main.cpp: the main kppp window has now layout control

	* connect.cpp: layouted the connection window.

	* modeminfo.cpp (ModemInfo): layoutet the modeminfo dialog
	  and layouted the ModemTransfer dialog (ATI query)

Mon Jan  5 20:59:00 1998  Harri Porten  <porten@tu-harburg.de>

	* accounting.cpp: telephone costs are stored in kppprc now.