@@ -1,3 +1,6 @@
+Thu Jan 13 06:58:29 1998  Peter Silva <peter.silva@videotron.ca>
+	* patch to prevent kppp hang if modem is off when connecting.
+
 Tue Jan 13 02:48:55 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>
 
 	* applied BSD patch from Alex <garbanzo@hooked.net>
